src/test/ui/rfc-2005-default-binding-mode/no-double-error.stderr
error[E0599]: no associated item named `XXX` found for type `u32` in the current scope
  --> $DIR/no-double-error.rs:18:9
   |
18 |         u32::XXX => { }
   |         ^^^^^^^^

error: aborting due to previous error

